# Kabsch-Cookbook

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  main.py  mkdocs.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: docs.yml  pr-title-lint.yml  release-please.yml  release.yml  test.yml
docs/: index.md
docs/algorithms/: index.md
docs/api/: index.md  jax.md  mlx.md  numpy.md  pytorch.md  tensorflow.md
docs/benchmarks/: index.md
docs/getting-started/: index.md
docs/guides/: index.md
src/kabsch_horn/: __init__.py
src/kabsch_horn/jax/: __init__.py  horn_quat_3d.py  kabsch_svd_nd.py
src/kabsch_horn/mlx/: _utils.py  horn_quat_3d.py  kabsch_svd_nd.py
src/kabsch_horn/numpy/: horn_quat_3d.py  kabsch_svd_nd.py
src/kabsch_horn/pytorch/: horn_quat_3d.py  kabsch_svd_nd.py
src/kabsch_horn/tensorflow/: horn_quat_3d.py  kabsch_svd_nd.py
src/kabsch_umeyama/: __init__.py  jax.py  mlx.py  numpy.py  pytorch.py  tensorflow.py
src/kabsch_umeyama/jax/: kabsch_svd_nd.py
src/kabsch_umeyama/mlx/: __init__.py  horn_quat_3d.py  kabsch_svd_nd.py
src/kabsch_umeyama/numpy/: __init__.py  kabsch_svd_nd.py
src/kabsch_umeyama/pytorch/: horn_quat_3d.py  kabsch_svd_nd.py
src/kabsch_umeyama/tensorflow/: horn_quat_3d.py  kabsch_svd_nd.py
tests/: adapters.py  conftest.py  strategies.py  test_catastrophic_cancellation.py  test_degeneracy.py  test_differentiability_traps.py  test_error_handling.py  test_forward_pass_equivalence.py  test_frameworks.py  test_gradient_verification.py  test_jax.py  test_kabsch_umeyama.py  test_mixed_dtype.py  test_mlx.py  test_mlx_float64_warning.py  test_properties.py  test_pytorch.py  test_reference_validation.py  test_rmsd_wrappers.py  test_tensorflow.py  test_tf_dynamic_validation.py  test_weighted.py  utils.py
