[project]
name = "kabsch-horn-cookbook"
version = "0.2.0"
description = "A comprehensive differentiable Kabsch (SVD) and Horn (Quaternion) alignment cookbook for modern ML frameworks with safe backward-pass gradients."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Hunter Heidenreich", email = "hunter.heidenreich@gmail.com" },
]
keywords = [
    "alignment",
    "kabsch",
    "horn",
    "point-cloud",
    "differentiable",
    "rotation",
    "quaternion",
    "svd",
    "rmsd",
    "pytorch",
    "jax",
    "tensorflow",
    "mlx",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/hunter-heidenreich/Kabsch-Cookbook"
Repository = "https://github.com/hunter-heidenreich/Kabsch-Cookbook"
Issues = "https://github.com/hunter-heidenreich/Kabsch-Cookbook/issues"
Changelog = "https://github.com/hunter-heidenreich/Kabsch-Cookbook/blob/main/CHANGELOG.md"
Documentation = "https://hunter-heidenreich.github.io/Kabsch-Cookbook/"

[dependency-groups]
dev = [
    "hypothesis[numpy]>=6.100",
    "jax>=0.6.2",
    "jaxlib>=0.6.2",
    "mlx>=0.31.0; sys_platform == 'darwin'",
    "numpy>=2.2.6",
    "pytest>=9.0.2",
    "pytest-cov>=6.0",
    "rmsd>=1.5",
    "pre-commit>=4.0",
    "ruff>=0.14.0",
    "scipy>=1.15",
    "tensorflow>=2.20.0",
    "torch>=2.10.0",
]

docs = [
    "mkdocs-material>=9.6",
    "mkdocstrings[python]>=0.29",
    "mkdocs-section-index>=0.3",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/kabsch_horn --cov-report=xml:coverage.xml"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "RUF", # Ruff-specific rules
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
